--- a/about.html
+++ b/about.html
@@ -129,23 +129,23 @@
                 <p class="subtitle">Bertemu dengan para ahli yang akan membimbing perjalanan bahasa Inggris Anda.</p>
                 <div class="team-grid">
                     <div class="team-member">
-                        <img src="https://placehold.co/180x180/007bff/ffffff?text=Teacher+1" alt="Teacher Name 1">
+                        <img src="https://cdn.imgchest.com/files/y2pckdka5g7.jpg" alt="Teacher Name 1">
                         <h4>Jane Doe, M.Ed.</h4>
                         <p>Spesialis General English & IELTS</p>
                     </div>
                     <div class="team-member">
-                        <img src="https://placehold.co/180x180/007bff/ffffff?text=Teacher+2" alt="Teacher Name 2">
-                        <h4>John Smith, Ph.D.</h4>
+                        <img src="https://cdn.imgchest.com/files/yd5cege3gv4.png" alt="Teacher Name 2">
+                        <h4>Otto Apocalypse, Ph.D.</h4>
                         <p>Ahli TOEFL & Business English</p>
                     </div>
                     <div class="team-member">
-                        <img src="https://placehold.co/180x180/007bff/ffffff?text=Teacher+3" alt="Teacher Name 3">
-                        <h4>Sarah Lee, B.A.</h4>
+                        <img src="https://cdn.imgchest.com/files/y2pckdkadg7.jpg" alt="Teacher Name 3">
+                        <h4>Kiana Kaslana, B.A.</h4>
                         <p>Pengajar Basic & Intermediate English</p>
                     </div>
                     <div class="team-member">
-                        <img src="https://placehold.co/180x180/007bff/ffffff?text=Teacher+4" alt="Teacher Name 4">
-                        <h4>Michael Brown, M.A.</h4>
+                        <img src="https://cdn.imgchest.com/files/yq9c323al34.webp" alt="Teacher Name 4">
+                        <h4>Welt Yang, M.A.</h4>
                         <p>Koordinator Kurikulum</p>
                     </div>
                 </div>
@@ -192,7 +192,7 @@
                     <ul>
                         <li><i class="fas fa-map-marker-alt"></i> Jakarta, Indonesia</li>
                         <li><i class="fas fa-phone"></i> +62 857-9802-4920</li>
-                        <li><a href="mailto:info@arwanedu.com"><i class="fas fa-envelope"></i> info@arwanedu.com</a></li>
+                        <li><a href="mailto:mochizukizulkifli@gmail.com"><i class="fas fa-envelope"></i> mochizukizulkifli@gmail.com</a></li>
                         <li><i class="fas fa-clock"></i> Senin - Jumat: 09:00 - 18:00 WIB</li>
                     </ul>
                 </div>
@@ -200,8 +200,8 @@
                 <div class="footer-map-section">
                     <h3>Lokasi Kami</h3>
                     <div class="map-wrapper">
-                           <a href="https://maps.app.goo.gl/V5DDmDRx35inEFzbA" target="_blank" class="map-link">
-                               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d416.920579167653!2d106.95782680082965!3d-6.205632138915078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e698b788b34c5bf%3A0x4df51d49bbc66d87!2sJl.%20Raya%20Rw.%20Kuning%20No.240%2C%20RT.1%2FRW.6%2C%20Pulo%20Gebang%2C%20Kec.%20Cakung%2C%20Kota%20Jakarta%20Timur%2C%20Daerah%20Khusus%20Ibukota%20Jakarta%2013950!5e0!3m2!1sid!2sid!4v1751967741779!5m2!1sid!2sid" class="map-frame" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                           <a href="https://maps.app.goo.gl/ugCkWfwNA7CuvsTs9" target="_blank" class="map-link">
+                               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.008238299948!2d106.88538491120921!3d-6.2626440936997865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f2e75d5cb443%3A0xf3559c7fdfae6cda!2sUniversitas%20Dirgantara%20Marsekal%20Suryadarma%2C%20Kampus%20A!5e0!3m2!1sid!2sid!4v1753870890803!5m2!1sid!2sid" class="map-frame" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                            </a>
                     </div>
                     <address>Jl. Raya Halim Perdanakusuma No.1, RT.1/RW.9, Halim Perdanakusuma, Kec. Makasar, Kota Jakarta Timur, Daerah Khusus Ibukota Jakarta 13610, Indonesia</address>
