--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
             <div class="container">
                 <div class="story-grid">
                     <div class="story-image">
-                        <img src="https://cdn.imgchest.com/files/yvdcwgw93ny.jpg" alt="Our Story Image">
+                        <img src="https://cdn.imgchest.com/files/4nec8n8odr4.jpg" alt="Our Story Image">
                     </div>
                     <div class="story-content">
                         <h3>Perjalanan Arwan Edu</h3>
