--- a/advanced.html
+++ b/advanced.html
@@ -199,8 +199,8 @@
                 <div class="footer-map-section">
                     <h3>Lokasi Kami</h3>
                     <div class="map-wrapper">
-                           <a href="https://maps.app.goo.gl/V5DDmDRx35inEFzbA" target="_blank" class="map-link">
-                               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d416.920579167653!2d106.95782680082965!3d-6.205632138915078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e698b788b34c5bf%3A0x4df51d49bbc66d87!2sJl.%20Raya%20Rw.%20Kuning%20No.240%2C%20RT.1%2FRW.6%2C%20Pulo%20Gebang%2C%20Kec.%20Cakung%2C%20Kota%20Jakarta%20Timur%2C%20Daerah%20Khusus%20Ibukota%20Jakarta%2013950!5e0!3m2!1sid!2sid!4v1751967741779!5m2!1sid!2sid" class="map-frame" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                           <a href="https://maps.app.goo.gl/ugCkWfwNA7CuvsTs9" target="_blank" class="map-link">
+                               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.008238299948!2d106.88538491120921!3d-6.2626440936997865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f2e75d5cb443%3A0xf3559c7fdfae6cda!2sUniversitas%20Dirgantara%20Marsekal%20Suryadarma%2C%20Kampus%20A!5e0!3m2!1sid!2sid!4v1753870890803!5m2!1sid!2sid" class="map-frame" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                            </a>
                     </div>
                     <address>Jl. Raya Halim Perdanakusuma No.1, RT.1/RW.9, Halim Perdanakusuma, Kec. Makasar, Kota Jakarta Timur, Daerah Khusus Ibukota Jakarta 13610, Indonesia</address>
