--- a/advanced.html
+++ b/advanced.html
@@ -191,7 +191,7 @@
                     <ul>
                         <li><i class="fas fa-map-marker-alt"></i> Jakarta, Indonesia</li>
                         <li><i class="fas fa-phone"></i> +62 857-9802-4920</li>
-                        <li><a href="mailto:info@arwanedu.com"><i class="fas fa-envelope"></i> info@arwanedu.com</a></li>
+                        <li><a href="mailto:mochizukizulkifli@gmail.com"><i class="fas fa-envelope"></i> mochizukizulkifli@gmail.com</a></li>
                         <li><i class="fas fa-clock"></i> Senin - Jumat: 09:00 - 18:00 WIB</li>
                     </ul>
                 </div>
