--- a/contact.html
+++ b/contact.html
@@ -114,14 +114,14 @@
                             <h4>Lokasi Kantor</h4>
                         </div>
                         <address>
-                            Forum Praktisi Indonesia<br>
+                            Arwan Edu<br>
                             Office Center<br>
-                            Perkantoran Tanjung Mas Raya<br>
-                            Blok B1 No.44<br>
-                            Tanjung Barat, Jakarta Selatan
+                            Jl. Raya Halim Perdanakusuma No.1<br>
+                            RT.1/RW.9, Halim Perdanakusuma, Kec. Makasar<br>
+                            Kota Jakarta Timur, Daerah Khusus Ibukota Jakarta
                         </address>
                         <p>Kantor pusat kami berlokasi di Jakarta Selatan dengan jangkauan program ke seluruh Indonesia. Untuk pertemuan tatap muka, silakan buat appointment terlebih dahulu.</p>
-                        <a href="https://maps.app.goo.gl/V5DDmDRx35inEFzbA" target="_blank" class="btn btn-map"><i class="fas fa-map"></i> Lihat di Maps</a>
+                        <a href="https://maps.app.goo.gl/ugCkWfwNA7CuvsTs9 target="_blank" class="btn btn-map"><i class="fas fa-map"></i> Lihat di Maps</a>
                     </div>
                 </div>
             </div>
@@ -166,12 +166,6 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-             <div id="successModal" class="modal">
-            <div class="modal-content">
-                <i class="fas fa-check-circle checkmark-icon"></i>
-                <h3>Pesan Anda Telah Terkirim!</h3>
-                <p>Terima kasih! Pesan Anda telah kami terima.</p>
             </div>
         </section>
     </main>
