--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                         </div>
                         <h4>Telepon & WhatsApp</h4>
                         <p>Hubungi kami langsung untuk konsultasi cepat</p>
-                        <a href="tel:+6285870663856" class="contact-number">+62 858-7066-3856</a>
+                        <a href="tel:+6285870663856" class="contact-number">+62 857-9802-4920</a>
                         <a href="https://wa.me/6285870663856" target="_blank" class="btn btn-whatsapp"><i class="fab fa-whatsapp"></i> Chat WhatsApp</a>
                     </div>
 
@@ -69,7 +69,7 @@
                         </div>
                         <h4>Email</h4>
                         <p>Kirim pertanyaan detail atau proposal kemitraan</p>
-                        <a href="mailto:info@forumpraktisi.id" class="contact-email">info@forumpraktisi.id</a>
+                        <a href="mailto:info@forumpraktisi.id" class="contact-email">mochizukizulkifli@gmail.com</a>
                         <a href="mailto:info@forumpraktisi.id" class="btn btn-email"><i class="fas fa-paper-plane"></i> Kirim Email</a>
                     </div>
 
@@ -79,7 +79,7 @@
                         </div>
                         <h4>Website & Media Sosial</h4>
                         <p>Ikuti perkembangan terbaru dan program kami</p>
-                        <a href="https://www.forumpraktisi.id" target="_blank" class="contact-website">www.forumpraktisi.id</a>
+                        <a href="https://www.forumpraktisi.id" target="_blank" class="contact-website">arwanedu.luhu.jp</a>
                         <a href="https://www.forumpraktisi.id" target="_blank" class="btn btn-website"><i class="fas fa-external-link-alt"></i> Kunjungi Website</a>
                     </div>
                 </div>
