--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@
                             RT.1/RW.9, Halim Perdanakusuma, Kec. Makasar<br>
                             Kota Jakarta Timur, Daerah Khusus Ibukota Jakarta
                         </address>
-                        <p>Kantor pusat kami berlokasi di Jakarta Selatan dengan jangkauan program ke seluruh Indonesia. Untuk pertemuan tatap muka, silakan buat appointment terlebih dahulu.</p>
+                        <p>Kantor pusat kami berlokasi di Jakarta Timur dengan jangkauan program ke seluruh Indonesia. Untuk pertemuan tatap muka, silakan buat appointment terlebih dahulu.</p>
                         <a href="https://maps.app.goo.gl/ugCkWfwNA7CuvsTs9 target="_blank" class="btn btn-map"><i class="fas fa-map"></i> Lihat di Maps</a>
                     </div>
                 </div>
