--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                             <p class="quote-text">"Sangat puas dengan kualitas kursus di Arwan Edu. Pengajarnya
                                 interaktif dan materi disampaikan dengan sangat jelas. Rekomendasi!"</p>
                             <div class="user-info">
-                                <img src="senaka.svg" alt="John Doe">
+                                <img src="https://cdn.imgchest.com/files/739cxgxb5l7.jpeg" alt="John Doe">
                                 <div class="text-info">
                                     <h4>Senaka</h4>
                                     <p class="role">Mahasiswa</p>
@@ -158,7 +158,7 @@
                                 sangat aplikatif. Bukan teori kosong, tapi pengalaman nyata di lapangan. Sangat
                                 membantu!"</p>
                             <div class="user-info">
-                                <img src="clausie.svg" alt="Rina Mulyani">
+                                <img src="https://cdn.imgchest.com/files/49zc292ek6y.jpg" alt="Rina Mulyani">
                                 <div class="text-info">
                                     <h4>Clausie</h4>
                                     <p class="role">HR Manager</p>
@@ -175,7 +175,7 @@
                                 untuk strategi bisnis kami. Kami dapat solusi yang konkret, bukan sekadar saran umum."
                             </p>
                             <div class="user-info">
-                                <img src="punipun.svg" alt="Budi Santosa">
+                                <img src="https://cdn.imgchest.com/files/4apc5w5qll4.jpeg" alt="Budi Santosa">
                                 <div class="text-info">
                                     <h4>Clarissa Widjaya</h4>
                                     <p class="role">CEO EduTech Startup</p>
@@ -192,7 +192,7 @@
                                 benar-benar ahli. Materinya ringkas, jelas, dan langsung bisa diterapkan di proyek
                                 saya."</p>
                             <div class="user-info">
-                                <img src="matcha-mei.svg" alt="Andi Wijaya">
+                                <img src="https://cdn.imgchest.com/files/7lxcprpj9r7.jpg" alt="Andi Wijaya">
                                 <div class="text-info">
                                     <h4>Matcha Mei</h4>
                                     <p class="role">Mahasiswa Pascasarjana</p>
