--- a/contact.html
+++ b/contact.html
@@ -69,8 +69,8 @@
                         </div>
                         <h4>Email</h4>
                         <p>Kirim pertanyaan detail atau proposal kemitraan</p>
-                        <a href="mailto:info@forumpraktisi.id" class="contact-email">mochizukizulkifli@gmail.com</a>
-                        <a href="mailto:info@forumpraktisi.id" class="btn btn-email"><i class="fas fa-paper-plane"></i> Kirim Email</a>
+                        <a href="mailto:mochizukizulkifli@gmail.com" class="contact-email">mochizukizulkifli@gmail.com</a>
+                        <a href="mailto:mochizukizulkifli@gmail.com" class="btn btn-email"><i class="fas fa-paper-plane"></i> Kirim Email</a>
                     </div>
 
                     <div class="info-block">
@@ -79,8 +79,8 @@
                         </div>
                         <h4>Website & Media Sosial</h4>
                         <p>Ikuti perkembangan terbaru dan program kami</p>
-                        <a href="https://www.forumpraktisi.id" target="_blank" class="contact-website">arwanedu.luhu.jp</a>
-                        <a href="https://www.forumpraktisi.id" target="_blank" class="btn btn-website"><i class="fas fa-external-link-alt"></i> Kunjungi Website</a>
+                        <a href="https://arwanedu.luhu.jp" target="_blank" class="contact-website">arwanedu.luhu.jp</a>
+                        <a href="https://arwanedu.luhu.jp" target="_blank" class="btn btn-website"><i class="fas fa-external-link-alt"></i> Kunjungi Website</a>
                     </div>
                 </div>
             </div>
