--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,7 @@
                             Kota Jakarta Timur, Daerah Khusus Ibukota Jakarta
                         </address>
                         <p>Kantor pusat kami berlokasi di Jakarta Timur dengan jangkauan program ke seluruh Indonesia. Untuk pertemuan tatap muka, silakan buat appointment terlebih dahulu.</p>
-                        <a href="https://maps.app.goo.gl/ugCkWfwNA7CuvsTs9 target="_blank" class="btn btn-map"><i class="fas fa-map"></i> Lihat di Maps</a>
+                        <a href="https://maps.app.goo.gl/bdFh7gUsSEJoL2Qq7 target="_blank" class="btn btn-map"><i class="fas fa-map"></i> Lihat di Maps</a>
                     </div>
                 </div>
             </div>
