--- a/contact.html
+++ b/contact.html
@@ -59,8 +59,8 @@
                         </div>
                         <h4>Telepon & WhatsApp</h4>
                         <p>Hubungi kami langsung untuk konsultasi cepat</p>
-                        <a href="tel:+6285870663856" class="contact-number">+62 857-9802-4920</a>
-                        <a href="https://wa.me/6285870663856" target="_blank" class="btn btn-whatsapp"><i class="fab fa-whatsapp"></i> Chat WhatsApp</a>
+                        <a href="tel:+6285798024920" class="contact-number"> +6285798024920</a>
+                        <a href="https://wa.me/6285798024920" target="_blank" class="btn btn-whatsapp"><i class="fab fa-whatsapp"></i> Chat WhatsApp</a>
                     </div>
 
                     <div class="info-block">
@@ -121,7 +121,7 @@
                             Kota Jakarta Timur, Daerah Khusus Ibukota Jakarta
                         </address>
                         <p>Kantor pusat kami berlokasi di Jakarta Timur dengan jangkauan program ke seluruh Indonesia. Untuk pertemuan tatap muka, silakan buat appointment terlebih dahulu.</p>
-                        <a href="https://maps.app.goo.gl/bdFh7gUsSEJoL2Qq7 target="_blank" class="btn btn-map"><i class="fas fa-map"></i> Lihat di Maps</a>
+                        <a href="https://maps.app.goo.gl/dy1Jfs4AyPYa8sPDA target="_blank" class="btn btn-map"><i class="fas fa-map"></i> Lihat di Maps</a>
                     </div>
                 </div>
             </div>
