--- a/basic.html
+++ b/basic.html
@@ -35,7 +35,7 @@
         </li>
         <li><a href="about.html">Tentang Kami</a></li>
         <li><a href="contact.html">Kontak</a></li>
-        <li><a href="register.html" class="btn-register">Daftar / Login</a></li>
+        <li><a href="register.html" class="btn-register">Login</a></li>
     </ul>
 </nav>
         </div>
