--- a/Kursus.html
+++ b/Kursus.html
@@ -34,7 +34,7 @@
                     </li>
                     <li><a href="about.html">Tentang Kami</a></li>
                     <li><a href="contact.html">Kontak</a></li>
-                    <li><a href="register.html" class="btn-register">Login</a></li>
+                    <li><a href="login.html" class="btn-register">Login</a></li>
                 </ul>
             </nav>
         </div>
