--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <img src="basic_english.png" alt="Basic English Course">
                         <div class="course-info">
                             <h4>Basic English</h4>
-                            <p>Mulai perjalanan bahasa Inggris Anda dari dasar...</p>
+                            <p>Mulai perjalanan bahasa Inggris Anda dari dasar....</p>
                             <a href="basic.html" class="btn btn-secondary">Lihat Detail</a>
                         </div>
                     </div>
